Try Dave's config to resolve surefire OOM
git-svn-id: http://www.ebayopensource.org/svn/vjet/trunk@182 27f4aac7-f869-4a38-a8c2-f1a995e726e6