@@ -94,11 +94,15 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.8.1</version>
 				<configuration>
 					<systemPropertyVariables>
-			            <java.source.path>${java.source.path}</java.source.path>
-			        </systemPropertyVariables>
-			        <enableAssertions>false</enableAssertions>
+			            	<java.source.path>${java.source.path}</java.source.path>
+			        	</systemPropertyVariables>
+					<forkMode>always</forkMode>
+          				<trimStackTrace>false</trimStackTrace>
+          				<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+			        	<enableAssertions>false</enableAssertions>
 					<testFailureIgnore>false</testFailureIgnore>
 					<includes>
 						<include>**/*Test.java</include>
